Update file credenciais

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=db_packnow_aws
-POSTGRES_HOST=container_postgresql
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=Aula*infra
+POSTGRES_DB=aws_db
+POSTGRES_HOST=aws-db.cj3xyxnwpntb.us-east-1.rds.amazonaws.com
 POSTGRES_PORT=5432
