edit: correcao de port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,12 @@
-# DATASOURCE
-#spring.datasource.url=jdbc:h2:file:./data/exemplo
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
+# Porta do servidor - configurável via variável de ambiente SERVER_PORT (padrão: 8080)
+server.port=${SERVER_PORT}
 
-# H2 Console
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
+# Configuração do PostgreSQL via variáveis de ambiente
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração do Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# JPA
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
